--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@angular/animations": "^18.2.0",
     "@angular/cdk": "^18.2.8",
-    "@angular/common": "^18.2.0",
+    "@angular/common": "^18.2.12",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
     "@angular/forms": "^18.2.0",
@@ -20,8 +20,12 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@types/xml2js": "^0.4.14",
     "rxjs": "~7.8.0",
+    "stream": "^0.0.3",
+    "timers": "^0.1.1",
     "tslib": "^2.3.0",
+    "xml2js": "^0.6.2",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
