--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@angular/common": "^18.2.12",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "^18.2.0",
     "@angular/material": "^18.2.8",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@types/xml2js": "^0.4.14",
+    "firebase": "^11.0.2",
     "rxjs": "~7.8.0",
     "stream": "^0.0.3",
     "timers": "^0.1.1",
